[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiocometd-mock"
dynamic = ["version"]
description = "A mock CometD server using asyncio."
authors = [
    { name = "Benton Snyder", email = "benton@bensnyde.me" },
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing :: Mocking",
]
dependencies = [
    "aiohttp",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
    "pytest-aiohttp",
    # "pytest-pythonpath"
]

[project.scripts]
aiocometd-mock = "aiocometd_mock.main:main"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
python_paths = "."

[tool.hatch.version]
# This tells hatch to get the version from your package's __init__.py file,
# keeping it in a single source of truth.
path = "aiocometd_mock/__init__.py"

[tool.hatch.build.targets.sdist]
# This excludes common development files from the source distribution
# to keep the final package clean.
exclude = [
    ".git",
    ".github",
    ".vscode",
    "/.ruff_cache",
    "/.pytest_cache",
]